--- a/.gitignore
+++ b/.gitignore
@@ -361,4 +361,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/Bannerlord.ModUpdater/Properties/launchSettings.json
+/Bannerlord.ModUpdater/appsettings.Development.json
