--- a/Bannerlord.ModUpdater/Bannerlord.ModUpdater.csproj
+++ b/Bannerlord.ModUpdater/Bannerlord.ModUpdater.csproj
@@ -8,11 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cocona" Version="2.2.0" />
     <PackageReference Include="Octokit" Version="9.1.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="repos.json">
+    <None Update="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
