--- a/Bannerlord.ModUpdater/appsettings.json
+++ b/Bannerlord.ModUpdater/appsettings.json
@@ -4,31 +4,62 @@
     "repos": [
       {
         "owner": "adwitkow",
-        "name": "Bannerlord.MoreTraitInfo"
+        "name": "Bannerlord.MoreTraitInfo",
+        "workshopId": "2961485825",
+        "tags": [
+          "UI",
+          "Utility",
+          "Singleplayer"
+        ]
       },
       {
         "owner": "adwitkow",
-        "name": "Bannerlord.EncyclopediaFilters"
+        "name": "Bannerlord.EncyclopediaFilters",
+        "workshopId": "2916000111",
+        "tags": [
+          "UI",
+          "Utility",
+          "Singleplayer"
+        ]
       },
       {
         "owner": "adwitkow",
-        "name": "Bannerlord.NearbyTournaments"
+        "name": "Bannerlord.NearbyTournaments",
+        "workshopId": "2910268800",
+        "tags": [
+          "UI",
+          "Utility",
+          "Singleplayer"
+        ]
       },
       {
         "owner": "adwitkow",
-        "name": "Bannerlord.RemoveFogOfWar"
+        "name": "Bannerlord.RemoveFogOfWar",
+        "workshopId": "2956986632",
+        "tags": [
+          "UI",
+          "Utility",
+          "Singleplayer"
+        ]
       },
       {
         "owner": "adwitkow",
-        "name": "Bannerlord.FamilyTree"
+        "name": "Bannerlord.EncyclopediaExtender",
+        "workshopId": "2953564744",
+        "tags": [
+          "UI",
+          "Utility",
+          "Singleplayer"
+        ]
       },
       {
         "owner": "adwitkow",
-        "name": "Bannerlord.EncyclopediaExtender"
-      },
-      {
-        "owner": "adwitkow",
-        "name": "Bannerlord.FamilyTree"
+        "name": "Bannerlord.FamilyTree",
+        "workshopId": "2959469806",
+        "tags": [
+          "UI",
+          "Singleplayer"
+        ]
       }
     ]
   }
