Add support for forcing a specific version of the release

--- a/Bannerlord.ModUpdater/appsettings.json
+++ b/Bannerlord.ModUpdater/appsettings.json
@@ -6,6 +6,7 @@
         "owner": "adwitkow",
         "name": "Bannerlord.MoreTraitInfo",
         "workshopId": "2961485825",
+        "ForcedVersion": null,
         "tags": [
           "UI",
           "Utility",
@@ -16,6 +17,7 @@
         "owner": "adwitkow",
         "name": "Bannerlord.EncyclopediaFilters",
         "workshopId": "2916000111",
+        "ForcedVersion": null,
         "tags": [
           "UI",
           "Utility",
@@ -26,6 +28,7 @@
         "owner": "adwitkow",
         "name": "Bannerlord.NearbyTournaments",
         "workshopId": "2910268800",
+        "ForcedVersion": null,
         "tags": [
           "UI",
           "Utility",
@@ -36,6 +39,7 @@
         "owner": "adwitkow",
         "name": "Bannerlord.RemoveFogOfWar",
         "workshopId": "2956986632",
+        "ForcedVersion": null,
         "tags": [
           "UI",
           "Utility",
@@ -46,6 +50,7 @@
         "owner": "adwitkow",
         "name": "Bannerlord.EncyclopediaExtender",
         "workshopId": "2953564744",
+        "ForcedVersion": null,
         "tags": [
           "UI",
           "Utility",
@@ -56,6 +61,7 @@
         "owner": "adwitkow",
         "name": "Bannerlord.FamilyTree",
         "workshopId": "2959469806",
+        "ForcedVersion": null,
         "tags": [
           "UI",
           "Singleplayer"
